# sync-resolve

./: Cargo.toml  README.md
examples/: host_table.rs  lookup_addr.rs  lookup_host.rs  lookup_srv.rs  lookup_txt.rs  resolver.rs
src/: address.rs  config.rs  hostname.rs  hosts.rs  idna.rs  lib.rs  message.rs  record.rs  resolv_conf.rs  resolver.rs  socket.rs
