[package]

name = "resolve"
description = "DNS communication protocol"

documentation = "https://docs.rs/resolve/"
homepage = "https://github.com/murarth/resolve"
repository = "https://github.com/murarth/resolve"

keywords = [ "dns", "host", "resolver" ]
license = "MIT/Apache-2.0"
readme = "README.md"

version = "0.2.0"
authors = ["Murarth <murarth@gmail.com>"]

[dependencies]
idna = "0.2.3"
log = "0.4.14"
rand = "0.8.4"
