[package]
name = "sync-resolve"
description = "Synchronous DNS resolver"
documentation = "https://docs.rs/sync-resolve/"
repository = "https://github.com/sunfishcode/sync-resolve"
keywords = ["dns", "host", "resolver"]
categories = ["network-programming"]
license = "MIT/Apache-2.0"
version = "0.2.0"
authors = [
    "Murarth <murarth@gmail.com>",
    "Dan Gohman <dev@sunfishcode.online>"
]
edition = "2018"

[dependencies]
idna = "0.2.3"
log = "0.4.14"
rand = "0.8.4"

[badges]
maintenance = { status = "passively-maintained" }
